@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-2016 The R Core Team.
+ *  Copyright (C) 2000-2021 The R Core Team.
  *
  *  This header file is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
@@ -32,15 +32,7 @@
 #ifndef __STDC_WANT_IEC_60559_FUNCS_EXT__
 # define __STDC_WANT_IEC_60559_FUNCS_EXT__ 1
 #endif
-/* The C++ headers in Solaris Studio are strict C++98, and 100+ 
-   packages would fail because of not using e.g. std::floor 
-   or using C99 functions such as 
-
-   erf exmp1 floorf fmin fminf fmax lgamma lround loglp round
-   snprintf strcasecmp trunc
-
-   We workaround the first, here and in Rmath.h.
-
+/*
    DO_NOT_USE_CXX_HEADERS is legacy, left as a last resort.
 */
 #if defined(__cplusplus) && !defined(DO_NOT_USE_CXX_HEADERS)
@@ -48,9 +40,11 @@
 # include <cstdio>
 # include <climits>
 # include <cmath>
+/* No longer needed with C++11 versions of C++ headers
 # ifdef __SUNPRO_CC
 using namespace std;
-# endif
+# endif 
+*/
 #else
 # include <stdlib.h> /* Not used by R itself, but widely assumed in packages */
 # include <stdio.h>  /* Used by ca 200 packages, but not in R itself */
